# Changes from Version 1.3.2 to 1.3.3 [24-Feb-2015] #

Fix issue with calculating stats that sometimes occurred with a constant posterior distribution.

# Changes from Version 1.3.1 to 1.3.2 [29-Jan-2015] #

Fix error where autojags did not handle NA rhat values properly. Added more helpful warning when at least one rhat value = NA.

# Changes from Version 1.3 to 1.3.1 [15-Jan-2015] #

Minor wording changes.

# Changes from Version 1.2 to 1.3 [1-Dec-2014] #

Add warning and fix issue with traceplot when number of saved iterations after thinning was rounded up by JAGS (because it wasn't an integer). Several small fixes to clean up code and get R CMD check to run cleanly.

# Changes from Version 1.1 to 1.2 [19-Nov-2014] #

Add some failsafes/warnings.

# Changes from Version 1.0 to 1.1 [28-July-2014] #

Clean up / modularize code. Add an auto-updating function autojags(). Several small bugfixes.

# Changes from Version 0.01-7 to 1.00 [21-May-2014] #

Update to new package name ('jagsUI'). Implement update function. Bugfixes. Final release prior to CRAN upload.

# Changes from Version 0.01-6 to 0.01-7 [12-May-2014] #

Fix setting the random seed so it actually works. Allow running MCMC chains in parallel. Various bugfixes.

# Changes from Version 0.01-5 to 0.01-6 [9-May-2014] #

Overhaul calculation of statistics to speed things up. Minor bugfixes.

# Changes from Version 0.01-4 to 0.01-5 [6-May-2014] #

Bugfixes. Changed primary function name to 'jags' from 'simplejags' for simplicity. Also edited several other function names. Added a summary table to the output object.

# Changes from Version 0.01-3 to 0.01-4 [1-May-2014] #

Improve processing of input data to avoid some common errors. Changed traceplots() function to traceplot() to be more consistent with similar packages. Added ability to calculate DIC and pD for JAGS models. Cleaned up the print method.

# Changes from Version 0.01-2 to 0.01-3 [17-Apr-2014] #
