@@ -1,6 +1,6 @@
 Package: jagsUI
-Version: 1.3.3
-Date: 2015-2-24
+Version: 1.3.4
+Date: 2015-3-21
 Title: A Wrapper Around rjags to Streamline JAGS Analyses
 Author: Ken Kellner <ken@kenkellner.com>
 Maintainer: Ken Kellner <ken@kenkellner.com>
