@@ -1,3 +1,7 @@
+# Changes from Version 1.3.3 to 1.3.4 [21-Mar-2015] #
+
+Add option save.all.iter in autojags() function to combine MCMC samples from all iterative updates into final posterior.
+
 # Changes from Version 1.3.2 to 1.3.3 [24-Feb-2015] #
 
 Fix issue with calculating stats that sometimes occurred with a constant posterior distribution.
